# kvmeta

./: Makefile.am  bootstrap.sh  configure.ac
debian_files/: README  changelog  control  copyright  kvalobs-metadata.dirs  kvalobs-metadata.install  kvalobs_metadata.dirs  kvalobs_metadata.install  kvget-metadata.dirs  kvget-metadata.install  kvget_metadata.dirs  kvget_metadata.install  libkvutil-perl.dirs  libkvutil-perl.install  rules
doc/stinfosys2kvalobs/: stinfosys2kvalobs.txt
etc/: stinfosys.conf
m4/: kvalobs.m4
share/metadata/: HIST_INSTALL  INSTALL  Makefile
share/metadata/algorithms/: CiSt.pl  Cu_low.pl  DIP_CHECK.pl  FREEZE_CHECK.pl  PROGNOSTIC_SPACE_CHECK.pl  PROGNOSTIC_SPACE_CHECK402.pl  PROGNOSTIC_SPACE_CHECK_PP.pl  PROGNOSTIC_SPACE_CHECK_RR.pl  RANGE_CHECK.pl  STEP_CHECK.pl  bad_weatherdescription.pl  badsight_minorfog.pl  badweather_highvisibility.pl  between_between.pl  calm_blizzard.pl  calm_sea.pl  calm_waves.pl  clearsky_cloudbase.pl  clearsky_cloudtype.pl  clearsky_lowclouds.pl  cloudamountunknown_somesight.pl  cloudbase_hi.pl  cloudcover_nocloudtype.pl  cloudgroup_noamount.pl  cloudy_coolground.pl  cloudy_missingreport.pl  cloudy_noclouds.pl  cold_day.pl  cold_freezingprecip.pl  cold_geonor.pl  cold_rain.pl  cold_rainnational.pl  combiseverity.pl  diffAc.pl  diffCb.pl  diffNs.pl  diffSt.pl  diffcloudcover_nocloudtype.pl  difflowclouds.pl  diffmediumclouds.pl  (+141 more)
share/metadata/checks/checks_auto/: QC1-1_checks  QC1-3_checks  QC1-3a_checks  QC1-3b_checks  QC1-4_checks
share/metadata/checks/checks_manual/QC1-2/: 100_checks.pl  101_checks.pl  105_checks.pl  106_checks.pl  107_checks.pl  108_checks.pl  109_checks.pl  110_checks.pl  1130_47checks.pl  11500_49_checks  11500_50_checks  121.b_checks.pl  122.aa_checks.pl  122.ab_checks.pl  122.ac_checks.pl  122.ad_checks.pl  123.a_checks.pl  123.b_checks.pl  123.c_checks.pl  124.a_checks.pl  125.a_checks.pl  (+333 more)
share/metadata/hist_obs_pgm/: obs_pgm.out
share/metadata/hist_station/: station.out
share/metadata/hist_types/: types.out
share/metadata/model/: model.out
share/metadata/obs_pgm/: obs_pgm.out
share/metadata/operator/: operator.out
share/metadata/param/: param.out
share/metadata/qcx_info/: qcx_info.out
share/metadata/reference_station/: dokumentasjon_reference_station  nedref  tempref
share/metadata/station/: dposi.lst  station.out  station.pl
share/metadata/station_param/station_param_auto/: QC1-1_fasteGrenser  QC1-1_stasjonsGrenser  QC1-1ctrl  QC1-1extra  QC1-1param  QC1-3a  QC1-3b  QC1-4_FF  QC1-4_PR  QC1-4_RR_12  QC1-4_RR_24.old  QC1-4_RR_24N.old  QC1-4_TA  QC1-4_UU  QC1-4meta  QC2d-4-262  QC2d-4-262metadata  ansvar_qcx
share/metadata/types/: types.out
share/statiskedata/kltestdata/: README  test-data.tar.bz2
src/: Kvutil.pm  Makefile.am  auto.sh  environment.out  environment.sql  extra_tables.sql  insert_update_delete_table.pl  insert_update_delete_table_speed.pl  instance_tables.sql  kvconfig  kvget-metadata  kvget-metadata-base  kvget-metadata-cron.in  kvget-metadata-instance  kvget-metadata_insert_update_delete  kvget-metadata_insert_update_delete_all  kvget-metadata_insert_update_delete_staging  kvget-utesperring  kvget_metadata  kvget_metadata_cron  kvget_metadata_cron.in  kvget_metadata_staging  kvget_utesperring  kvget_utesperring_staging  kvinstall_metadata  kvinstall_metadata_test  kvinstalldb  utesperring_update.pl  utesperring_update.sh
src/dbscript/: CVS_export_simple.pl  CVS_export_subdir.pl  INSTALL  MAKE_INSTALL  Makefile  Makefile.am  QC1-1manual.pl  TIME_export.pm  algorithm_all  algorithm_ins  base_station_param.pm  checks2kvalobsdb  checks_all  checks_all.pl  checks_auto  checks_sensor  dbQC-simple.pl  dbQC.pl  dbQC.pm  dbQC.pm.in  dbQC1-1  dbQC1-1_only_QC1-1param.pl  dbQC1-1_simple.pl  dbQC1-3  dbQC1-4  dbQC1-4.pl  dbQC1-4_cat.pl  dbQC1-4_cat.pl~  dbQC2d-4.pl  dbtest.pl  decodeutility.pm  distinct_qcx2checks_intodb  dos_to_unix.pl  get_checks.pl  get_paramid.pl  get_station_param.pl  import.pl  insert_column.pl  insert_station_param.pl  installasjon_metadata  (+52 more)
src/hist_dbscript/: Makefile.am  hist_run_metadata  hist_run_metadata.in.sh  hist_run_obs_pgm  hist_run_station  hist_run_station_metadata  hist_run_types
src/klima2kvalobs/: GRENSEV_ST_CAT.sql  KLIMAFILTER.sql  Makefile.am  T_KC.sh  T_KC.sql  T_KC2kvalobs.pl  run_klima2kvalobs.in  run_klima_filter_dump  run_klimadump
src/klima2kvalobs/range_check/: RANGE_CHECK.sh  RANGE_CHECK.sql  RANGE_CHECK2station_param.pl  RANGE_PARAM_GROUPS.sql
src/kvhome_bin/: auto.sh  cleanup_metadat.sh  cleanup_metno_kvalobs.sh  git_pull  run_QC1-1_all_cron  run_klima2kvalobs_all  view_auto.sh
src/monitor/: README  monitor.sh  monitor_log.sh  monitor_manual.sh  monitor_message.sh  monitor_template.sh  monitor_test.sh
src/range_check/: INSTALL_stinfocron  make_range_check.py  make_range_check.sh  make_range_check2_all.py  make_range_check_83.py  make_range_check_low_high.py  make_range_check_lowest_highest.py  make_range_check_now.py  make_range_check_now.sh  make_range_check_now_sky.py  make_range_check_now_sky.sh  make_svv_range_check_211.py  set_st_group_in_range_check_st_cat.sh
src/range_check2kvalobs/: RANGE_CHECK2station_param.pl  run_range_check2kvalobs  run_range_check2kvalobs_all
src/stinfosys2kvalobs/: INSTALL  Makefile.am  README  add_stations.pl  conf.pm  delete_old.pl  filter_stinfosys2kvalobs.pl  hp.pl  intodb_stinfosys2kvalobs.pl  message_format_stdump.pl  obs_pgm2.pl  obs_pgm2kvalobs.pl  obs_pgm2kvalobs_new.pl  param2kvalobs.pl  run_stinfosys2hist_kvalobs_new  run_stinfosys2hist_kvalobs_new.in  run_stinfosys2kvalobs  run_stinfosys2kvalobs_new  run_stinfosys2kvalobs_new.in  run_stinfosys2kvalobs_station  sensor_info2kvalobs.pl  sensor_info_bucket2kvalobs.pl  st_time.pm  station2kvalobs.pl  station_info_avg2kvalobs.pl  stinfosys.pm  stinfosys2kvalobs.pl  stinfosys_path.pm  stinfosysdb.pm  test_wmonr_stinfosys2kvalobs.pl  wmonr_stinfosys2kvalobs.pm
src/stinfosys2kvalobs/stinfosys2station_param/: Makefile.am  sensor_info2kv.pl  sensor_info_bucket2kv.pl  stinfosys2QC1-1-112.pl  stinfosys2autosnow.pl
(+402 files in other folders)
